[package]
name = "sdk_1018"
version = '0.0.7'
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "common"}
migration = { path = "entities/migration"}
entities = { path = "entities/entities"}

[dev-dependencies]
serde_json = { version = '1.0.82' }